<resources>
    <string name="app_name">Speak Easy</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="topic">Topic</string>
    <string name="text">Speak Easy</string>
        <string name="title_activity_main_activity2">MainActivity2Activity</string>
        <string name="title_activity_second">SecondActivity</string>
    <string name="articleTextOne">Small Text</string>
    <string name="articleTextTwo">Small Text</string>
    <string name="articleTextThree">Small Text</string>
    <string name="articleTextFour">Small Text</string>
    <string name="urlLink">Small Text</string>
</resources>
